# languagesTranslate_Ollama

./: .gitignore  LICENSE  README.md  app.py  arawak.py  hello.py  prompt_eng.py  pyproject.toml
mesop/: aviso.txt
report/: README.md
static/: index.js  style.css
streamlit/: app_st_cont.py  prompt_st.py
streamlit_V1/: prompt_st.py
streamlit_v2/: README.md  botones_acceso.py  chatbot_st_v2.py  persistencia_memoria.py
streamlit_v2/src/: botones_acceso.py  chatbot_st_V2.py  persistencia_memoria.py  prompt_st.py  rag.py
streamlit_v2/src/dictionary/: __init__.py
templates/: about.html  index.html
