[project]
name = "llmchatbotollama-t1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-ollama>=0.3.2",
    "markdown>=3.8",
    "ollama>=0.4.7",
    "protobuf==3.20.*",
    "pylint>=3.3.6",
    "pypdf>=5.5.0",
    "streamlit>=1.45.0",
]
